@@ -9,7 +9,6 @@ import static net.sourceforge.pmd.util.CollectionUtil.listOf;
 import static org.junit.jupiter.api.Assertions.assertEquals;
 
 import java.nio.file.Path;
-import java.nio.file.Paths;
 
 import org.junit.jupiter.api.Test;
 
@@ -19,24 +18,24 @@ class ConfigurableFileNameRendererTest {
 
     @Test
     void testRelativize() {
-        FileId file = FileId.fromPath(Paths.get("a", "b", "c"));
-        String displayName = getDisplayName(file, listOf(Paths.get("a")));
-        assertEquals(displayName, Paths.get("b", "c").toString());
+        FileId file = FileId.fromPath(Path.of("a", "b", "c"));
+        String displayName = getDisplayName(file, listOf(Path.of("a")));
+        assertEquals(displayName, Path.of("b", "c").toString());
     }
 
     @Test
     void testRelativizeOutOfDir() {
-        FileId file = FileId.fromPath(Paths.get("a", "b", "c"));
-        String displayName = getDisplayName(file, listOf(Paths.get("d")));
-        assertEquals(displayName, Paths.get("..", "a", "b", "c").toString());
+        FileId file = FileId.fromPath(Path.of("a", "b", "c"));
+        String displayName = getDisplayName(file, listOf(Path.of("d")));
+        assertEquals(displayName, Path.of("..", "a", "b", "c").toString());
     }
 
 
     @Test
     void testRelativizeWithRoot() {
-        Path path = Paths.get("a", "b", "c");
+        Path path = Path.of("a", "b", "c");
         FileId file = FileId.fromPath(path);
-        String displayName = getDisplayName(file, listOf(Paths.get("/")));
+        String displayName = getDisplayName(file, listOf(Path.of("/")));
         assertEquals(path.toAbsolutePath().toString(),
                      displayName);
     }
