@@ -191,7 +191,7 @@ public final class JIntersectionType implements JTypeMirror {
     }
 
     private static void checkWellFormed(JTypeMirror primary, List<? extends JTypeMirror> flattened) {
-        assert flattened.get(0) == primary || primary == primary.getTypeSystem().OBJECT
+        assert flattened.getFirst() == primary || primary == primary.getTypeSystem().OBJECT
             : "Not a well-formed intersection " + flattened;
         for (int i = 0; i < flattened.size(); i++) {
             JTypeMirror ci = flattened.get(i);
