@@ -31,12 +31,12 @@ class ASTExpressionTest {
     @Test
     void testExpressionWithApexGetter() throws ASTExpression.DataNodeStateException {
         for (String template : SNIPPET_TEMPLATES) {
-            ASTCompilationUnit compilationUnit = compile(String.format(template, "MyValue"));
+            ASTCompilationUnit compilationUnit = compile(template.formatted("MyValue"));
 
             List<Node> nodes = getExpressions(compilationUnit);
             assertEquals(1, nodes.size(), template);
 
-            ASTExpression expression = (ASTExpression) nodes.get(0);
+            ASTExpression expression = (ASTExpression) nodes.getFirst();
             Map<VfTypedNode, String> identifiers = expression.getDataNodes();
             assertEquals(1, identifiers.size(), template);
 
@@ -49,12 +49,12 @@ class ASTExpressionTest {
     @Test
     void testExpressionWithStandardController() throws ASTExpression.DataNodeStateException {
         for (String template : SNIPPET_TEMPLATES) {
-            ASTCompilationUnit compilationUnit = compile(String.format(template, "MyObject__c.Text__c"));
+            ASTCompilationUnit compilationUnit = compile(template.formatted("MyObject__c.Text__c"));
 
             List<Node> nodes = getExpressions(compilationUnit);
             assertEquals(1, nodes.size(), template);
 
-            ASTExpression expression = (ASTExpression) nodes.get(0);
+            ASTExpression expression = (ASTExpression) nodes.getFirst();
             Map<VfTypedNode, String> identifiers = expression.getDataNodes();
             assertEquals(1, identifiers.size(), template);
 
@@ -67,12 +67,12 @@ class ASTExpressionTest {
     @Test
     void testSelectOptions() throws ASTExpression.DataNodeStateException {
         for (String template : SNIPPET_TEMPLATES) {
-            ASTCompilationUnit compilationUnit = compile(String.format(template, "userOptions.0"));
+            ASTCompilationUnit compilationUnit = compile(template.formatted("userOptions.0"));
 
             List<Node> nodes = getExpressions(compilationUnit);
             assertEquals(1, nodes.size(), template);
 
-            ASTExpression expression = (ASTExpression) nodes.get(0);
+            ASTExpression expression = (ASTExpression) nodes.getFirst();
             Map<VfTypedNode, String> identifiers = expression.getDataNodes();
             assertEquals(1, identifiers.size(), template);
 
@@ -85,12 +85,12 @@ class ASTExpressionTest {
     @Test
     void testMultipleIdentifiers() throws ASTExpression.DataNodeStateException {
         for (String template : SNIPPET_TEMPLATES) {
-            ASTCompilationUnit compilationUnit = compile(String.format(template, "MyObject__c.Text__c + ' this is a string' + MyObject__c.Text2__c"));
+            ASTCompilationUnit compilationUnit = compile(template.formatted("MyObject__c.Text__c + ' this is a string' + MyObject__c.Text2__c"));
 
             List<Node> nodes = getExpressions(compilationUnit);
             assertEquals(1, nodes.size(), template);
 
-            ASTExpression expression = (ASTExpression) nodes.get(0);
+            ASTExpression expression = (ASTExpression) nodes.getFirst();
             Map<VfTypedNode, String> identifiers = expression.getDataNodes();
             assertEquals(2, identifiers.size(), template);
 
@@ -106,12 +106,12 @@ class ASTExpressionTest {
     @Test
     void testIdentifierWithRelation() throws ASTExpression.DataNodeStateException {
         for (String template : SNIPPET_TEMPLATES) {
-            ASTCompilationUnit compilationUnit = compile(String.format(template, "MyObject1__c.MyObject2__r.Text__c"));
+            ASTCompilationUnit compilationUnit = compile(template.formatted("MyObject1__c.MyObject2__r.Text__c"));
 
             List<Node> nodes = getExpressions(compilationUnit);
             assertEquals(1, nodes.size(), template);
 
-            ASTExpression expression = (ASTExpression) nodes.get(0);
+            ASTExpression expression = (ASTExpression) nodes.getFirst();
             Map<VfTypedNode, String> identifiers = expression.getDataNodes();
             assertEquals(1, identifiers.size(), template);
 
@@ -125,12 +125,12 @@ class ASTExpressionTest {
     @Test
     void testMultipleIdentifiersWithRelation() throws ASTExpression.DataNodeStateException {
         for (String template : SNIPPET_TEMPLATES) {
-            ASTCompilationUnit compilationUnit = compile(String.format(template, "MyObject1__c.MyObject2__r.Text__c + ' this is a string' + MyObject1__c.MyObject2__r.Text2__c"));
+            ASTCompilationUnit compilationUnit = compile(template.formatted("MyObject1__c.MyObject2__r.Text__c + ' this is a string' + MyObject1__c.MyObject2__r.Text2__c"));
 
             List<Node> nodes = getExpressions(compilationUnit);
             assertEquals(1, nodes.size(), template);
 
-            ASTExpression expression = (ASTExpression) nodes.get(0);
+            ASTExpression expression = (ASTExpression) nodes.getFirst();
             Map<VfTypedNode, String> identifiers = expression.getDataNodes();
             assertEquals(2, identifiers.size(), template);
 
@@ -150,12 +150,12 @@ class ASTExpressionTest {
     @Test
     void testExpressionWithArrayIndexingNotSupported() {
         for (String template : SNIPPET_TEMPLATES) {
-            ASTCompilationUnit compilationUnit = compile(String.format(template, "MyObject__c['Name']"));
+            ASTCompilationUnit compilationUnit = compile(template.formatted("MyObject__c['Name']"));
 
             List<Node> nodes = getExpressions(compilationUnit);
             assertEquals(2, nodes.size(), template);
 
-            ASTExpression expression = (ASTExpression) nodes.get(0);
+            ASTExpression expression = (ASTExpression) nodes.getFirst();
             try {
                 expression.getDataNodes();
                 fail(template + " should have thrown");
@@ -168,12 +168,12 @@ class ASTExpressionTest {
     @Test
     void testIdentifierWithRelationIndexedAsArrayNotSupported() {
         for (String template : SNIPPET_TEMPLATES) {
-            ASTCompilationUnit compilationUnit = compile(String.format(template, "MyObject1__c['MyObject2__r'].Text__c"));
+            ASTCompilationUnit compilationUnit = compile(template.formatted("MyObject1__c['MyObject2__r'].Text__c"));
 
             List<Node> nodes = getExpressions(compilationUnit);
             assertEquals(2, nodes.size(), template);
 
-            ASTExpression expression = (ASTExpression) nodes.get(0);
+            ASTExpression expression = (ASTExpression) nodes.getFirst();
             try {
                 expression.getDataNodes();
                 fail(template + " should have thrown");
@@ -186,12 +186,12 @@ class ASTExpressionTest {
     @Test
     void testIdentifierWithComplexIndexedArrayNotSupported() {
         for (String template : SNIPPET_TEMPLATES) {
-            ASTCompilationUnit compilationUnit = compile(String.format(template, "theLineItems[item.Id].UnitPrice"));
+            ASTCompilationUnit compilationUnit = compile(template.formatted("theLineItems[item.Id].UnitPrice"));
 
             List<Node> nodes = getExpressions(compilationUnit);
             assertEquals(2, nodes.size(), template);
 
-            ASTExpression expression = (ASTExpression) nodes.get(0);
+            ASTExpression expression = (ASTExpression) nodes.getFirst();
             try {
                 expression.getDataNodes();
                 fail(template + " should have thrown");
